--- a/src/main/webapp/ticket_form.zul
+++ b/src/main/webapp/ticket_form.zul
@@ -27,23 +27,17 @@
                     </row>
                     <row>
                         <label value="Priority:" style="font-weight:bold; text-align:right;" width="120px"/>
-                        <combobox width="325px" placeholder="Select priority" id="priorityBox">
-                            <comboitem label="Low"/>
-                            <comboitem label="Medium"/>
-                            <comboitem label="High"/>
+                        <combobox width="325px" placeholder="Select priority" id="priorityBox" readonly="true">
+                        </combobox>
+                    </row>
+                    <row>
+                        <label value="Status:" style="font-weight:bold; text-align:right;" width="120px"/>
+                        <combobox width="325px" placeholder="Select status" id="statusBox" readonly="true">
                         </combobox>
                     </row>
                     <row>
                         <label value="Assign To:" style="font-weight:bold; text-align:right;" width="120px"/>
                         <textbox width="325px" placeholder="Support agent name" id="assignedToBox"/>
-                    </row>
-                    <row>
-                        <label value="Status:" style="font-weight:bold; text-align:right;" width="120px"/>
-                        <combobox width="325px" placeholder="Select status" id="statusBox">
-                            <comboitem label="Open"/>
-                            <comboitem label="In Progress"/>
-                            <comboitem label="Closed"/>
-                        </combobox>
                     </row>
                     <row>
                         <label value="Requester:" width="120px" style="font-weight:bold;"/>
